holos/deploy/clusters/k3d-holos/components/kargo/httproute-kargo-external-webhooks-server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: kargo
  name: kargo-external-webhooks-server
  namespace: kargo
spec:
  hostnames:
  - kargo-webhooks.holos.localhost
  parentRefs:
  - name: default
    namespace: istio-gateways
    sectionName: https
  rules:
  - backendRefs:
    - name: kargo-external-webhooks-server
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
